# Document_Manipulations

./: README.md  clean_pycache.sh  display_pdf_in_jupyter.ipynb
a00_Docx_Manipulation/: a01_module_win32com.ipynb  a02_module_python-docx.ipynb  a03_module_docx2pdf.ipynb  dealing_with_docx_files.ipynb
a00_PDF_Manipulation/: a01_parse_pdf_using_pdfminer.ipynb
module_camelot_for_pdf_tables/: README.md
module_camelot_for_pdf_tables/a00_intro_camelot/: README.md  README_tmp.html  a.py  a00_test_camelot.ipynb  pyproject.toml  test.py  test_camelot.py  test_tkinter.py
module_camelot_for_pdf_tables/camelot_example_01/: a01_camelot_eg01.ipynb
module_camelot_for_pdf_tables/camelot_with_streamlit/: a.py  a01_chatbot_ocr.ipynb  a01_test_azure_chat_openai.ipynb  a03_openai_qa_chain_pdf_faiss.ipynb  a03_standalone_openai_qa_chain_pdf_faiss.ipynb  a03b_openai_qa_chain_pdf_faiss.ipynb  app.py  dev.ipynb  test_azure_chat_openai.py  working.ipynb
module_img2table/: a00_img2table_basics.ipynb  a01_img2table_detail.ipynb
module_pytesseract/: README.md  a00_module_pdf2image_using_poppler.ipynb  a00_module_pytesseract.ipynb  images.txt  ocr_eg01.ipynb
module_tabula_parse_table_from_pdf/: a00_module_tabula_py.ipynb  official_tabula_example.ipynb
module_tabula_parse_table_from_pdf/module_tabula/: a01_example_01.py  output.csv
module_tabula_parse_table_from_pdf/tabula_examples/: README.md  a01_tabula_eg01.ipynb  readme.txt  test_tabula.py
pdf_ocr_streamlit_app/pdf_ocr_app_01/: a.py  a00_minimal_ocr_streamlit.ipynb  a01_pdf_ocr_streamlit.ipynb  app.py  app_orig.py  util.py  (+1 more)
(+14 files in other folders)
